# lidar-point-cloud-segmentation

./: .gitignore  README.md  dataset_loader_test.py  main.py  pyproject.toml  questions.md  segmentation_job.sh  submit_cylinder3d.sh  submit_pointcept.sh  submit_pointnet.sh  submit_randla_net.sh  submit_randla_net.sh.save
Cylinder3D/: main.py  pyproject.toml
Cylinder3D/network/: segmentator_3d_asymm_spconv.py
PointNet/: main.py  pointnet.py  pyproject.toml  train_pointnet.py
Pointcept/: .gitignore  README.md  install_env.sh  lancer_ptv3.sh  main.py  requirements_kitti.txt
Pointcept/configs/semantic_kitti/: semseg-pt-v2m2-0-base.py
Pointcept/documentations/: architecture.md
Pointcept/src/hub/: cli.py
Pointcept/src/hub/adapters/: base.py  pointtransformer_adapter.py
Pointcept/src/lidar_point_cloud_segmentation/: __init__.py
Pointcept_github/: .gitignore  .python-version  LICENSE  README.md  lancer_ptv3.sh  pyproject.toml  sequences
Pointcept_github/configs/semantic_kitti/: semseg-pt-v2m2-0-base.py
Pointcept_github/src/hub/adapters/: cylinder3d_adapter.py
Pointcept_github/src/hub/services/: registry.py
RandLA-Net/: README.md  config_randlanet.yaml  main.py  main_SemanticKITTI.py  pyproject.toml  requirements.txt  semantic_kitti_dataset.py
RandLA-Net-pytorch/: .gitignore  README.md  RandLANet.py  main_SemanticKITTI.py  pyproject.toml  requirements.txt  train_randlnet.sbatch
RandLA-Net-pytorch/output/: log_train.txt
RandLA-Net-pytorch/utils/nearest_neighbors/: knn.cpp
RandLA-Net/output/: log_train.txt
RandLA-Net/utils/: data_prepare_semantickitti.py
RandLA-Net/utils/nearest_neighbors/: setup.py
configs/: config_cylinder3d.yaml  config_pointcept.yaml  config_pointnet.yaml  semseg-pt-v2m2-0-base.py
interface/: pyproject.toml  visualize.py
lib/: pyproject.toml
lib/datasets/: collate.py  semantic_kitti.py  transforms.py
logs/: log_train.txt
