[project]
name = "pointcept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.0.1",
    "addict==2.4.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.11",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "asttokens==3.0.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "blinker==1.8.2",
    "brotli==1.0.9",
    "ccimport==0.4.4",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.3",
    "configargparse==1.7.1",
    "contourpy==1.1.1",
    "cumm-cu118==0.4.11",
    "cycler==0.12.1",
    "dash==4.0.0",
    "decorator==5.2.1",
    "einops==0.8.0",
    "eval-type-backport==0.3.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.13.1",
    "fire==0.7.1",
    "flask==3.0.3",
    "fonttools==4.57.0",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "gmpy2==2.1.2",
    "grpcio==1.62.2",
    "h5py==3.11.0",
    "huggingface-hub==0.26.5",
    "idna==3.7",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "ipython==8.12.3",
    "ipywidgets==8.1.8",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-core==5.8.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.7",
    "lark==1.3.1",
    "markdown==3.6",
    "markupsafe==2.1.3",
    "matplotlib==3.7.5",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "narwhals==1.42.1",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.1",
    "ninja==1.13.0",
    "numpy==1.24.3",
    "open3d==0.19.0",
    "packaging==26.0",
    "pandas==2.0.3",
    "parso==0.8.6",
    "pccm==0.4.16",
    "peft==0.13.2",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pip==24.2",
    "pkgutil-resolve-name==1.3.10",
    "platformdirs==4.3.6",
    "plotly==6.6.0",
    "plyfile<1.1",
    "pooch==1.8.2",
    "portalocker==3.0.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.2.0",
    "protobuf==4.25.3",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pybind11==3.0.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.2",
    "pyparsing==3.1.4",
    "pyquaternion==0.9.9",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "retrying==1.4.2",
    "rpds-py==0.20.1",
    "safetensors==0.4.4",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "sentry-sdk==2.54.0",
    "setuptools==75.1.0",
    "sharedarray==3.2.4",
    "six==1.16.0",
    "smmap==5.0.2",
    "spconv-cu118==2.3.6",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tensorboard>=2.14.0",
    "tensorboard-data-server==0.7.0",
    "tensorboardx==2.6.2.2",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "timm==1.0.11",
    "tokenizers==0.20.3",
    "tomli==2.0.2",
    "torch==2.1.0",
    "torch-cluster==1.6.3",
    "torch-geometric==2.6.1",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
    "torchaudio==2.1.0",
    "torchvision==0.16.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.46.3",
    "triton==2.1.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.3",
    "urllib3==2.2.3",
    "wandb==0.24.2",
    "wcwidth==0.6.0",
    "werkzeug==3.0.6",
    "wheel==0.44.0",
    "widgetsnbextension==4.0.15",
    "yapf==0.40.1",
    "yarl==1.15.2",
    "zipp>=3.20.2",
]
[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
