[project]
name = "randla-net-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "cython==0.29.37",
    "matplotlib>=3.7.5",
    "numpy==1.23.5",
    "pandas>=2.0.3",
    "pyyaml==6.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "setuptools==59.8.0",
    "tensorboard>=2.14.0",
    "tqdm==4.67.3",
    "wheel==0.45.1",
]
