[project]
name = "randla-net-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython==0.29.37",
    "torch==2.6.0",
    "torchvision",
    "matplotlib>=3.9.4",
    "numpy",
    "pandas>=2.1.0",
    "pyyaml==6.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "setuptools==59.8.0",
    "tensorboard>=2.20.0",
    "tqdm==4.67.3",
    "wheel==0.45.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }


